--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <p>
                             Thank you for all the sacrifices you make for me and my older sister, even when we can be stubborn at times. We truly appreciate everything you do for us, and we respect how you manage to handle it all as a single mother. Your strength and love inspire us every day. 
                         </p>
-                        <strong>--------From Totong and Anika-------</strong>
+                        <strong>From Totong and Anika</strong>
                     </div>
                 </div>
             </div>
